<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AdiChallenge.Text.Product.Detail.Section.Title"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_detail_reviews_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AdiChallenge.Text.Product.Detail.Review.Number"
        android:id="@+id/average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stars"
        app:layout_constraintHorizontal_chainStyle="packed"
        tools:text="4.7"
        />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:isIndicator="true"
        android:progressTint="@color/button_background"
        android:secondaryProgressTint="@color/background"
        app:layout_constraintTop_toTopOf="@id/average"
        app:layout_constraintBottom_toBottomOf="@id/average"
        app:layout_constraintStart_toEndOf="@id/average"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AdiChallenge.Text.Product.Detail.Review.Total"
        android:id="@+id/total_reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/stars"
        app:layout_constraintStart_toStartOf="@id/stars"
        app:layout_constraintEnd_toEndOf="@id/stars"
        tools:text="325 reviews"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/AdiChallenge.Button"
        android:id="@+id/add_review"
        android:layout_width="150dp"
        android:layout_height="@dimen/product_list_button_height"
        android:layout_marginTop="24dp"
        android:text="@string/product_detail_reviews_button_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_reviews"
        />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/AdiChallenge.Button"
        android:id="@+id/view_all"
        android:layout_width="150dp"
        android:layout_height="@dimen/product_list_button_height"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/product_detail_reviews_button_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_review"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>